--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,16 @@
 /vendor
 /web/core
 /web/sites/default/*/files 
-web/sites/*/files
-web/modules/contrib/
-web/themes/contrib
-web/sites/*/settings*.php
-web/sites/*/services*.yml
-web/sites/simpletest
-web/sites/*/modules/custom/*/node_modules/
-web/sites/*/modules/custom/*/tests/
-web/sites/*/modules/custom/*/tmp/
-web/sites/*/modules/custom/*/vendor/
+/web/sites/*/files
+/web/modules/contrib/
+/web/themes/contrib
+/web/sites/*/settings*.php
+/web/sites/*/services*.yml
+/web/sites/simpletest
+/web/sites/*/modules/custom/*/node_modules/
+/web/sites/*/modules/custom/*/tests/
+/web/sites/*/modules/custom/*/tmp/
+/web/sites/*/modules/custom/*/vendor/
 /web/css/*.map
 /web/js/*.map
 /web/libraries/
