--- a/composer.json
+++ b/composer.json
@@ -17,19 +17,23 @@
     "require": {
         "composer/installers": "^2.0",
         "drupal/adaptivetheme": "^5.1",
-        "drupal/admin_toolbar": "^3.3",
+        "drupal/admin_toolbar": "3.3",
+        "drupal/allowed_formats": "^2.0",
         "drupal/antibot": "^2.0",
         "drupal/asset_injector": "^2.16",
         "drupal/at_tool": "^2.0",
         "drupal/bootstrap": "^3.28",
-        "drupal/core-composer-scaffold": "^10.0",
-        "drupal/core-project-message": "^10.0",
-        "drupal/core-recommended": "^10.0",
+        "drupal/bootstrap5": "^3.0",
+        "drupal/core-composer-scaffold": "10.0.9",
+        "drupal/core-project-message": "10.0.9",
+        "drupal/core-recommended": "10.0.9",
         "drupal/devel": "^5.1",
         "drupal/devel_php": "^1.5",
         "drupal/gin": "^3.0@rc",
         "drupal/gin_toolbar": "^1.0@rc",
         "drupal/gtranslate": "^3.0",
+        "drupal/menu_export": "^1.4",
+        "drupal/menu_migration": "^2.0@alpha",
         "drupal/pathauto": "^1.11",
         "drupal/quickedit": "^1.0",
         "drupal/ruhi": "^10.1",
@@ -37,6 +41,7 @@
         "drupal/theme_switcher": "^2.0",
         "drupal/thex": "^9.2",
         "drupal/token": "^1.11",
+        "drupal/views_taxonomy_term_name_depth": "^7.2",
         "drupal/webform": "^6.2@beta",
         "drupal/zurb_foundation": "^9.0@beta",
         "drush/drush": "^11.5"
