--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
         "drupal/at_tool": "^2.0",
         "drupal/bootstrap": "^3.28",
         "drupal/bootstrap5": "^3.0",
+        "drupal/captcha": "^2.0@beta",
+        "drupal/conditional_fields": "^4.0@alpha",
         "drupal/config_filter": "^1.10",
         "drupal/config_split": "^1.9",
         "drupal/core-composer-scaffold": "10.0.9",
@@ -31,23 +33,28 @@
         "drupal/core-recommended": "10.0.9",
         "drupal/devel": "^5.1",
         "drupal/devel_php": "^1.5",
+        "drupal/entityqueue": "^1.6",
         "drupal/file_entity": "^2.0@RC",
         "drupal/gin": "^3.0@rc",
         "drupal/gin_toolbar": "^1.0@rc",
         "drupal/gtranslate": "^3.0",
+        "drupal/inline_entity_form": "^1.0@RC",
         "drupal/menu_export": "^1.4",
         "drupal/menu_migration": "^2.0@alpha",
+        "drupal/metatag": "^1.23",
+        "drupal/paragraphs": "^1.15",
         "drupal/pathauto": "^1.11",
+        "drupal/quick_node_clone": "^1.16",
         "drupal/quickedit": "^1.0",
         "drupal/ruhi": "^10.1",
+        "drupal/seckit": "^2.0",
         "drupal/smtp": "^1.2",
         "drupal/theme_switcher": "^2.0",
         "drupal/thex": "^9.2",
         "drupal/token": "^1.11",
         "drupal/views_taxonomy_term_name_depth": "^7.2",
         "drupal/webform": "^6.2@beta",
-        "drupal/zurb_foundation": "^9.0@beta",
-        "drush/drush": "^11.5"
+        "drupal/zurb_foundation": "^9.0@beta"
     },
     "conflict": {
         "drupal/drupal": "*"
